--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">PracticaFirebase</string>
+    <string name="title_activity_profile">ProfileActivity</string>
+    <string name="title_activity_main2">Main2Activity</string>
+    <string name="title_activity_login">LoginActivity</string>
 </resources>
