--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_activity_main2">Main2Activity</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="title_activity_chat">ChatActivity</string>
+    <string name="title_activity_register">RegisterActivity</string>
 </resources>
